--- a/less/lc-border.less
+++ b/less/lc-border.less
@@ -73,27 +73,22 @@
 
     &.br-2 {
         border-radius: 2px;
-        overflow: hidden;
     }
 
     &.br-3 {
         border-radius: 3px;
-        overflow: hidden;
     }
 
     &.br-4 {
         border-radius: 4px;
-        overflow: hidden;
     }
 
     &.br-5 {
         border-radius: 5px;
-        overflow: hidden;
     }
 
     &.bround {
         border-radius: 50%;
-        overflow: hidden;
     }
 
     &.bw-2:after {
