--- a/less/lc-helpers.less
+++ b/less/lc-helpers.less
@@ -102,6 +102,10 @@
     right: 0;
 }
 
+.ofh {
+    overflow: hidden;
+}
+
 .ts > *:not(:first-child):before {
     content: '\2022';
     margin: 7px;
